# assemblyai-tool

./: .gitignore  README.md  get-code.sh  pyproject.toml  tessl.json
src/assemblyai_tool/: __init__.py
tile/: tile.json
tile/docs/: architecture.md  basic-usage.md  index.md  python-api.md
tile/docs/commands/: batch.md  convert.md
tile/evals/scenario-1/: criteria.json  task.md
