[project]
name = "assemblyai-tool"
version = "0.2.1"
description = "Simple CLI wrapper around the AssemblyAI Python SDK"
readme = "README.md"
authors = [
    { name = "Yaniv Aknin", email = "yaniv@aknin.name" }
]
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.36.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

[project.scripts]
aait = "assemblyai_tool:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
