[project]
name = "assemblyai-tool"
version = "0.3.2"
description = "Simple CLI wrapper around the AssemblyAI Python SDK"
readme = "README.md"
authors = [
    { name = "Yaniv Aknin", email = "yaniv@aknin.name" }
]
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.48.4",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "typer>=0.21.0",
]

[project.scripts]
aait = "assemblyai_tool:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
